--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -59,7 +59,14 @@ The median of the graduates is the highest at 11 WORDSUM and mean is also highes
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+```{r}
+model1 <- aov(WORDSUM~DEGREE,data=WordData)
+summary.aov(model1)
+```
 
+The P value is very low at 0.000236. I reject the null hypothesis because the number is so low that the probability of getting the result we found is too low. 
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+
+We reject the null hypothesis because the P value is very low. We found that there is a difference between LT highschool graduates and highschool graduates. 
