--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -65,6 +65,12 @@ summary.aov(model1)
 ```
 
 The P value is very low at 0.000236. I reject the null hypothesis because the number is so low that the probability of getting the result we found is too low. 
+
+```{r}
+plot(TukeyHSD(model1))
+```
+
+The majority of those with a high school or junior college degree are below the mean in confidence leve;. This shows that they may more likely be more confident if they got a higher degree. 
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
